WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212045
Content disappears on CSS parallax example
https://bugs.webkit.org/show_bug.cgi?id=212045
Summary
Content disappears on CSS parallax example
Simon Fraser (smfr)
Reported
2020-05-18 14:35:19 PDT
Content disappears on CSS parallax example
Attachments
Patch
(13.53 KB, patch)
2020-05-18 14:38 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-18 14:38:49 PDT
Created
attachment 399674
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-18 14:38:52 PDT
<
rdar://problem/63194217
>
Dean Jackson
Comment 3
2020-05-18 14:42:31 PDT
Comment on
attachment 399674
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399674&action=review
> Source/WebCore/platform/graphics/FloatPoint3D.h:136 > + a.move(b.x(), b.y());
Wonder if move should return *self?
> Source/WebCore/platform/graphics/FloatPoint3D.h:159 > + return FloatPoint3D(a.x() + b.x(), a.y() + b.y(), a.z());
What about z?
> Source/WebCore/platform/graphics/FloatPoint3D.h:169 > + return FloatPoint3D(a.x() - b.x(), a.y() - b.y(), a.z());
Ditto?
Simon Fraser (smfr)
Comment 4
2020-05-18 16:11:13 PDT
https://trac.webkit.org/changeset/261837/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug